@@ -1,6 +1,6 @@
 package io.inji.verify.services.impl;
 
-import com.nimbusds.jose.JOSEException;
+import io.inji.verify.config.RedisConfigProperties;
 import io.inji.verify.dto.submission.*;
 import io.inji.verify.enums.VPResultStatus;
 import io.inji.verify.exception.VPSubmissionNotFoundException;
@@ -8,6 +8,7 @@ import io.inji.verify.models.AuthorizationRequestCreateResponse;
 import io.inji.verify.models.VPSubmission;
 import io.inji.verify.repository.VPSubmissionRepository;
 import io.inji.verify.utils.VerificationUtils;
+import io.mosip.vercred.vcverifier.CredentialsVerifier;
 import io.mosip.vercred.vcverifier.PresentationVerifier;
 import io.mosip.vercred.vcverifier.data.PresentationVerificationResult;
 import io.mosip.vercred.vcverifier.data.VCResult;
@@ -16,13 +17,10 @@ import io.mosip.vercred.vcverifier.data.VerificationStatus;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.*;
-
-import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
 import java.util.List;
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -39,15 +37,25 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @InjectMocks
     private VerifiablePresentationSubmissionServiceImpl verifiablePresentationSubmissionService;
+    RedisConfigProperties redisConfigProperties;
 
     @BeforeEach
     public void setUp() {
         MockitoAnnotations.openMocks(this);
+        redisConfigProperties = new RedisConfigProperties();
+        redisConfigProperties.setVpSubmissionPersisted(true);
+        redisConfigProperties.setVpSubmissionCacheEnabled(true);
+        verifiablePresentationSubmissionService = new VerifiablePresentationSubmissionServiceImpl(
+                vpSubmissionRepository,
+                mock(CredentialsVerifier.class),
+                presentationVerifier,
+                verifiablePresentationRequestService,
+                redisConfigProperties);
     }
 
     @Test
     public void testSubmit_Success() {
-        VPSubmissionDto vpSubmissionDto = new VPSubmissionDto("vpToken123", 
+        VPSubmissionDto vpSubmissionDto = new VPSubmissionDto("vpToken123",
             new PresentationSubmissionDto("id", "dId", new ArrayList<>()), "state123");
 
         verifiablePresentationSubmissionService.submit(vpSubmissionDto);
@@ -57,17 +65,15 @@ public class VerifiablePresentationSubmissionServiceImplTest {
     }
 
     @Test
-    public void testGetVPResult_Success_JSONObject() throws VPSubmissionNotFoundException, ParseException, JOSEException {
-        List<String> requestIds = Arrays.asList("req123");
-        List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.SUCCESS));
+    public void testGetVPResult_Success() throws VPSubmissionNotFoundException {
+        List<String> requestIds = new ArrayList<>();
+        List<VCResult> vcResults = new ArrayList<>();
+        requestIds.add("req123");
+        vcResults.add(new VCResult("", VerificationStatus.SUCCESS));
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[\"{\\\"verifiableCredential\\\":{\\\"credential\\\":{}}}\"]}", 
-            new PresentationSubmissionDto("id", "dId", Arrays.asList(
-                new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
-        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
+        VPSubmission vpSubmission = new VPSubmission("state123", "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[\"{\\\"verifiableCredential\\\":{\\\"credential\\\":{}}}\"]}", new PresentationSubmissionDto("id", "dId", List.of(new DescriptorMapDto("id", "format", "path", new PathNestedDto("format", "path")))));
+        when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(List.of(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
@@ -88,15 +94,15 @@ public class VerifiablePresentationSubmissionServiceImplTest {
     public void testGetVPResult_Success_Base64EncodedString() throws VPSubmissionNotFoundException {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
-        
+
         String vpTokenJson = "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}";
         String base64Token = Base64.getUrlEncoder().encodeToString(vpTokenJson.getBytes());
-        
+
         List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.SUCCESS));
-        VPSubmission vpSubmission = new VPSubmission("state123", "\"" + base64Token + "\"", 
+        VPSubmission vpSubmission = new VPSubmission("state123", "\"" + base64Token + "\"",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
@@ -113,16 +119,16 @@ public class VerifiablePresentationSubmissionServiceImplTest {
     public void testGetVPResult_Success_JSONArray() throws VPSubmissionNotFoundException {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
-        
+
         List<VCResult> vcResults1 = Arrays.asList(new VCResult("vc1", VerificationStatus.SUCCESS));
         List<VCResult> vcResults2 = Arrays.asList(new VCResult("vc2", VerificationStatus.SUCCESS));
-        
-        VPSubmission vpSubmission = new VPSubmission("state123", 
+
+        VPSubmission vpSubmission = new VPSubmission("state123",
             "[{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}, " +
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]", 
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(presentationVerifier.verify(anyString()))
             .thenReturn(new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults1))
@@ -141,17 +147,17 @@ public class VerifiablePresentationSubmissionServiceImplTest {
     public void testGetVPResult_Success_JSONArrayWithBase64() throws VPSubmissionNotFoundException {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
-        
+
         String vpToken1Json = "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}";
         String base64Token1 = Base64.getUrlEncoder().encodeToString(vpToken1Json.getBytes());
-        
+
         List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.SUCCESS));
-        
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "[\"" + base64Token1 + "\", {\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]", 
+
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "[\"" + base64Token1 + "\", {\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(presentationVerifier.verify(anyString()))
             .thenReturn(new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
@@ -166,12 +172,13 @@ public class VerifiablePresentationSubmissionServiceImplTest {
 
     @Test
     public void testGetVPResult_VPSubmissionNotFound() {
-        List<String> requestIds = Arrays.asList("req123");
+        List<String> requestIds = new ArrayList<>();
+        requestIds.add("req123");
         String transactionId = "tx123";
 
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(new ArrayList<>());
 
-        assertThrows(VPSubmissionNotFoundException.class, 
+        assertThrows(VPSubmissionNotFoundException.class,
             () -> verifiablePresentationSubmissionService.getVPResult(requestIds, transactionId));
     }
 
@@ -180,11 +187,11 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.INVALID, new ArrayList<>()));
@@ -203,11 +210,11 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         String transactionId = "tx123";
 
         List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.INVALID));
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
@@ -226,11 +233,11 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         String transactionId = "tx123";
 
         List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.EXPIRED));
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
@@ -248,10 +255,10 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", "null", 
+        VPSubmission vpSubmission = new VPSubmission("state123", "null",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
@@ -267,11 +274,11 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId)).thenReturn(null);
 
@@ -286,10 +293,10 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", new ArrayList<>()));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
@@ -305,10 +312,10 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", null));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
@@ -324,11 +331,11 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
@@ -348,7 +355,7 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         VPSubmission vpSubmission = new VPSubmission("state123", "12345", // Invalid format (number)
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
@@ -367,7 +374,7 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         VPSubmission vpSubmission = new VPSubmission("state123", "[123, \"invalid\"]", // Invalid array items
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
@@ -383,10 +390,10 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", "[\"invalid-base64!!!\"]", 
+        VPSubmission vpSubmission = new VPSubmission("state123", "[\"invalid-base64!!!\"]",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
@@ -402,10 +409,10 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", "\"invalid-base64!!!\"", 
+        VPSubmission vpSubmission = new VPSubmission("state123", "\"invalid-base64!!!\"",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
@@ -421,11 +428,11 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, Arrays.asList(new VCResult("", VerificationStatus.SUCCESS))));
@@ -444,11 +451,11 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         String transactionId = "tx123";
 
         List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.SUCCESS));
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
@@ -467,15 +474,15 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId))
             .thenReturn(new AuthorizationRequestCreateResponse());
-        
+
         List<VCResult> vcResults = Arrays.asList(new VCResult("", VerificationStatus.INVALID));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults));
@@ -486,16 +493,16 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         assertEquals(VPResultStatus.FAILED, resultDto.getVpResultStatus());
     }
 
-    @Test 
+    @Test
     public void testGetVPResult_TokenMatchingFailedException() throws VPSubmissionNotFoundException {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(verifiablePresentationRequestService.getLatestAuthorizationRequestFor(transactionId)).thenReturn(null);
 
@@ -510,11 +517,11 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<String> requestIds = Arrays.asList("req123");
         String transactionId = "tx123";
 
-        VPSubmission vpSubmission = new VPSubmission("state123", 
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}", 
+        VPSubmission vpSubmission = new VPSubmission("state123",
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(presentationVerifier.verify(anyString())).thenReturn(
             new PresentationVerificationResult(VPVerificationStatus.VALID, new ArrayList<>()));
@@ -537,13 +544,13 @@ public class VerifiablePresentationSubmissionServiceImplTest {
             new VCResult("vc2", VerificationStatus.EXPIRED),
             new VCResult("vc3", VerificationStatus.INVALID)
         );
-        
-        VPSubmission vpSubmission = new VPSubmission("state123", 
+
+        VPSubmission vpSubmission = new VPSubmission("state123",
             "[{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}, " +
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]", 
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(presentationVerifier.verify(anyString()))
             .thenReturn(new PresentationVerificationResult(VPVerificationStatus.VALID, vcResults))
@@ -565,14 +572,14 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         List<VCResult> successResults = Arrays.asList(new VCResult("vc_success", VerificationStatus.SUCCESS));
         List<VCResult> expiredResults = Arrays.asList(new VCResult("vc_expired", VerificationStatus.EXPIRED));
         List<VCResult> invalidResults = Arrays.asList(new VCResult("vc_invalid", VerificationStatus.INVALID));
-        
-        VPSubmission vpSubmission = new VPSubmission("state123", 
+
+        VPSubmission vpSubmission = new VPSubmission("state123",
             "[{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}, " +
             "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}, " +
-            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]", 
+            "{\"proof\":{\"type\":\"Ed25519Signature2018\"},\"verifiableCredential\":[]}]",
             new PresentationSubmissionDto("id", "dId", Arrays.asList(
                 new DescriptorMapDto("id","format","path", new PathNestedDto("format","path")))));
-        
+
         when(vpSubmissionRepository.findAllById(requestIds)).thenReturn(Arrays.asList(vpSubmission));
         when(presentationVerifier.verify(anyString()))
             .thenReturn(new PresentationVerificationResult(VPVerificationStatus.VALID, successResults))
@@ -586,7 +593,7 @@ public class VerifiablePresentationSubmissionServiceImplTest {
         assertNotNull(resultDto);
         assertEquals(VPResultStatus.FAILED, resultDto.getVpResultStatus());
         assertEquals(3, resultDto.getVcResults().size());
-        
+
         assertTrue(resultDto.getVcResults().stream()
             .anyMatch(vc -> vc.getVerificationStatus() == VerificationStatus.SUCCESS));
         assertTrue(resultDto.getVcResults().stream()
